[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/editor/sounds/hover.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/fonts/delfino.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/editor/sounds/click2.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/player/controlbinding_button.gd" type="Script" id=4]



[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0.054902, 0, 0.25098, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0705882, 0, 0.231373, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.0470588, 0.317647, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.15, 0.15, 0.15, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 2 )

[node name="Template" type="Control"]
margin_top = 140.0
margin_right = 40.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_right = 172.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Move Left:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyButton" type="Button" parent="."]
margin_left = 179.0
margin_right = 259.0
margin_bottom = 35.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
action_mode = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
id = "left"

[node name="HoverSound" type="AudioStreamPlayer" parent="KeyButton"]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="KeyButton"]
stream = ExtResource( 3 )
volume_db = -10.0
